--- a/templates/nats-server.conf.j2
+++ b/templates/nats-server.conf.j2
@@ -54,9 +54,11 @@ gateway {
 {% set ng = hostvars[host]['nats_gateway'] %}
     {name: "{{ng.name}}", url: "nats://{{ ng.user|default('gwu') }}:{{ ng.password|default('gwp') }}@{{ hostvars[host]['nats_address'] | default(hostvars[host].ansible_default_ipv4.address) }}:{{ng.port | default('7222')}}"},
 {% endfor %}{% endfor %}
+{%if nats_gateway.gateways | default(None) %}
 {% for entry in nats_gateway.gateways %}
     {name: "{{entry.name}}", url: "nats://{{ entry.user|default('gwu') }}:{{ entry.password|default('gwp') }}@{{ entry.host }}:{{entry.port | default('7222')}}"},
 {% endfor %}
+{% endif %}
   ]
 }
 {% endif %}
