--- a/templates/nats-server.conf.j2
+++ b/templates/nats-server.conf.j2
@@ -4,18 +4,18 @@
 host: {{ nats_address | default('0.0.0.0') }}
 
 # Client port of 4222 on interfaces defined above
-port: 4222
+port: {{ nats_server_port }}
 
 
-# HTTP monitoring port
-monitor_port: 8222
+# HTTP monitoring port default 8222
+monitor_port: {{ nats_server_monitor_port }} 
 
 
 # This is for clustering multiple servers together.
 cluster {
 
   # Route connections to be received on any interface on port 6222
-  port: 6222
+  port: {{ nats_server_cluster_port }}
 
   # Routes are protected, so need to use them with --routes flag
   # e.g. --routes=nats-route://ruser:T0pS3cr3t@otherdockerhost:6222
